# CMakeList.txt : CMake project for cpp_ref, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("cpp_ref")

# Add source to this project's executable.
add_executable (cpp_ref "cpp_ref.cpp" "cpp_ref.h")

# TODO: Add tests and install targets if needed.
